Agentforce/force-app/main/default/objects/Next_Action__c/Next_Action__c.object-meta.xml
<CustomObject>
    <label>Next Action</label>
    <nameField>
        <displayFormat>NA-{00000}</displayFormat>
        <label>Next Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Next Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>