Agentforce/force-app/main/default/objects/Next_Action__c/fields/Legacy_Next_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Next_Action_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Next Action Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>