Agentforce/force-app/main/default/objects/Next_Action__c/fields/Next_Action_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Action CaseSafeId</label>
    <type>Text</type>
</CustomField>