Agentforce/force-app/main/default/objects/Next_Action__c/validationRules/Unable_to_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>You can not edit an existing Action please create a new Action</errorMessage>
</ValidationRule>